# templates-django

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
docker/: entrypoint
makefiles/: databases.mk  django.mk  docker.mk  general.mk
src/apps/users/admin/: users.py
src/apps/users/migrations/: 0001_initial.py
src/fixtures/: auth_permissions.json  users.json
src/settings/admin/: allauth.py  base.py
src/settings/api/: env_local.py  rest_framework.py
src/settings/common/: base.py  database.py
src/urls/: admin.py
{{ cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug}}/docker/: start
{{ cookiecutter.project_slug}}/environments/api/{{ cookiecutter.api_environment }}/: env-postgres.example
{{ cookiecutter.project_slug}}/makefiles/: databases.mk  general.mk  init.mk  setup.mk
{{ cookiecutter.project_slug}}/src/fixtures/: users.json
{{ cookiecutter.project_slug}}/src/settings/api/: base.py  env_dev.py  rest_framework.py
{{ cookiecutter.project_slug}}/src/urls/: api.py
